--- a/src/components/titlebar.scss
+++ b/src/components/titlebar.scss
@@ -15,6 +15,7 @@ $icon-size: $menu-height * 0.8;
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
+  flex-shrink: 0;
 }
 
 .titlebar-text {
